force-app/main/default/objects/ApiEndpointVersion__mdt/fields/ApiEndpoint__c.field-meta.xml
<CustomField>
    <fullName>ApiEndpoint__c</fullName>
    <description>The associated base Api endpoint</description>
    <inlineHelpText>The associated base Api endpoint</inlineHelpText>
    <label>Api Endpoint</label>
    <referenceTo>ApiEndpoint__mdt</referenceTo>
    <relationshipLabel>Api Endpoint Versions</relationshipLabel>
    <relationshipName>ApiEndpointVersions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>