force-app/main/default/objects/ApiEndpointVersion__mdt/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>The name of the IApiRequestHandler class that should be used when this endpoint is hit</description>
    <inlineHelpText>The name of the IApiRequestHandler class that should be used when this endpoint is hit</inlineHelpText>
    <label>Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>