force-app/main/default/objects/ApiEndpointVersion__mdt/fields/EndpointVersion__c.field-meta.xml
<CustomField>
    <fullName>EndpointVersion__c</fullName>
    <description>The version of the endpoint (v1, v2, etc.)</description>
    <inlineHelpText>The version of the endpoint (v1, v2, etc.)</inlineHelpText>
    <label>Endpoint Version</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>v1</fullName>
                <default>true</default>
                <label>v1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>